# HiTrade

./: README.md
min-trade-backend/: pyproject.toml
min-trade-backend/app/: main.py
min-trade-backend/app/brains/: __init__.py  fundamental.py
min-trade-backend/app/core/: __init__.py  tronc_commun.py  trunk_engine.py
min-trade-backend/app/data/: __init__.py  brain_registry.json  ingestion.py  provider.py
min-trade-backend/app/data/files/: funds_data.xlsx
min-trade-backend/app/models/: __init__.py  brain.py  fund.py
min-trade-backend/app/routers/: __init__.py  funds.py  trunk.py
min-trade-frontend/: index.html  package-lock.json  package.json
min-trade-frontend/src/: App.tsx  index.css
